- [new] Added WFAuthorizationInfo->loginAsAuthorizationInfo($authInfo) function to make it easy to implement SSO or user-switching functionality.
- [new] Add this() function to WFObject to make it easier to use KVC magic on "current" object.
- [new] Add a smarty modifier plugin to json encode data.

Version 0.3.9 - 10/21/2010
- [new] Add WFRequestController->isMobileBrowser()
- [new] Add PhocoaControllerTestCase_PHPUnit as a PHPUnit TestCase subclass for testing controllers.
- [bugfix] Fix bug in WFImage that caused WFAction's to not be placed in <script> tags.
- [new] Add support for parameter options to WFPageDelegate::getParameterList().
        Form array('param1' => 'myDefaultValue', 'param2') allows you to optionally specify default values.
        Form array('param1' => array('defaultValue' => 'myDefaultValue', 'greedy' => true) allows you to specify other options, like greedy.
        Greedy is ignored on all but the LAST parameter, and has the effect of including the rest of the /-separated PATH_INFO in the last parameter.
- [new] Add WFSpamHoneypot widget prevent form spam.
- [bugfix] WFPageDelegate.willPushBindings() is no longer called if pushBindings() doesn't run. Previously the willPushBindings() delegate method would run even on an initial page load.
- [bugfix] Fix for WFBinding::OPTION_DO_NOT_PUSH_VALUE_SEMAPHORE which was accidentally causing a logic error even on widgets that did not use the feature. This caused bindings not to be pushed if the value was NULL. This broke many radio buttons, checkboxes, and dropdowns.
- [new] Add optional error code injection into WFKeyValueValidators::validateUrl()

Version 0.3.8 - 9/15/2010
- [new] add WFWebApplicationDelegate::rerouteInvocationPath() function to allow routing customizations.
- [bugfix] WFYAHOO_widget_TabView no longer tries to select tabs from $_REQUEST[$tabViewId] if the tab does not exist. This caused no tab to be selected in some cases.